cpu1: complete dense nn parity phase